tests/baselines/reference/modifiersOnInterfaceIndexSignature1.errors.txt
modifiersOnInterfaceIndexSignature1.ts(2,3): error TS1071: 'public' modifier cannot appear on an index signature.


==== modifiersOnInterfaceIndexSignature1.ts (1 errors) ====
    interface I {
      public [a: string]: number;
      ~~~~~~
!!! error TS1071: 'public' modifier cannot appear on an index signature.
    }